--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -58,7 +58,7 @@
 								<li><a href="/ksbk">快速本科</a></li>
                             </ul>
                         </li>
-                        <li><a href="/courseguide" id="course_guide">海外课程辅导</a></li>
+                        <li><a href="/courseguide" id="course_guide">学术辅导</a></li>
                         <li><a href="/zygh">海归职业规划</a></li>
                         <li><a href="#">创业贷款申请</a></li>
                         <li><a href="#">移民落户咨询</a></li>
@@ -97,44 +97,60 @@
 	<footer id="hxco-footer" role="contentinfo">
 		<div class="hxco-container">
 			<div class="row row-pb-md">
-				<div class="col-md-4 hxco-widget">
+				<div class="col-md-4">
 					<h3>四川恒心前途教育咨询有限公司</h3>
-					<p>地址： 四川省恒心前途教育咨询有限公司.</p>
-					<p><a href="#">Learn More</a></p>
+					<p>我们向留学生群体提供从名校直通、课业辅导、学历学位认证到职业规划，创业贷款申请指导、生活辅助的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
+					<p>We are unique, 我们只是比别人多了一点恒心</p>
+                    <p>You are fortunate, 你只是别别人多了恒心</p>
+                    <p>地址：四川省成都市高新区天府大道中段666号希顿国际广场C座1203室</p>
+                    <p>All rights reserved Copyright © 四川恒心前途教育咨询有限公司</p>
 				</div>
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="hxco-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Terms</a></li>
-					</ul>
+                <div class="col-md-4">
+                    <h3>热门标签</h3>
+                    <div style="margin-top: 1em">
+                        <a class="tagA" href="#">
+                            学历学位认证
+                        </a>
+                        <a class="tagA" href="#">
+                            初高中申请
+                        </a>
+                        <a class="tagA" href="#">
+                            本研直通
+                        </a>
+                        <a class="tagA" href="#">
+                            快速本科
+                        </a>
+                        <a class="tagA" href="#">
+                            学术辅导
+                        </a>
+                        <a class="tagA" href="#">
+                            海归职业规划
+                        </a>
+                        <a class="tagA" href="#">
+                            创业贷款申请
+                        </a>
+                        <a class="tagA" href="#">
+                            移民落户咨询
+                        </a>
+                    </div>
+                    <h3 style="margin-top: 1em">关注我们</h3>
+                    <div style="margin-top: 1em"><a href="/" target="_blank"><img src="/static/images/web/sina.png"> </a></div>
+                </div>
+				<div class="col-md-4">
+                    <h3>关注微信公众号</h3>
+                    <img src="/static/images/web/wechat.jpg" style="width: 160px;height:160px;">
+                    <h3 style="margin-top: 1em"><i class="icon-old-phone"></i><span style="margin-left: 5px;">(86)028-8263-9653</span></h3>
+                    <h3 style="margin-top: 1em"><i class="icon-mail"></i><span style="margin-left: 5px;">info@hexedu.com</span></h3>
 				</div>
 
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="hxco-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Terms</a></li>
-					</ul>
-				</div>
 
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="hxco-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Terms</a></li>
-					</ul>
-				</div>
 			</div>
 
-			<div class="row copyright">
-				<div class="col-md-12">
-					<p class="pull-left">
-						<small class="block">&copy; 2017. All Rights Reserved.</small>
-				    </p>
+{#			<div class="row copyright">#}
+{#				<div class="col-md-12">#}
+{#					<p class="pull-left">#}
+{#						<small class="block">&copy; 2017. All Rights Reserved.</small>#}
+{#				    </p>#}
 {#					<p class="pull-right">#}
 {#						<ul class="hxco-social-icons pull-right">#}
 {#							<li><a href="#"><i class="icon-twitter"></i></a></li>#}
@@ -143,8 +159,8 @@
 {#							<li><a href="#"><i class="icon-dribbble"></i></a></li>#}
 {#						</ul>#}
 {#					</p>#}
-				</div>
-			</div>
+{#				</div>#}
+{#			</div>#}
 
 		</div>
 	</footer>
