--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -25,10 +25,10 @@
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
-                            <h2>1. 立足美国本土，资源优势明显</h2>
-                            <p>名盛（MS）国际教育咨询总部位于北美第一大城市群洛杉矶。这里教育资源丰富。</p>
-                            <p>经过多年积累，我们已与包括UCLA和USC在内的众多美国大学建立了紧密而良好的互动关系，并拥有很多学校的独家战略合作资源,多年与移民局打交道的经验和业界良好的口碑。</p>
-                            <p>专业，认真和务实是名盛的标签。我们的专业团队100%具有海外名校留学经历。这确保了我们的服务是最有针对性的和最能满足留学生需求的。</p>
+                            <h2>年轻却不轻狂的团队</h2>
+                            <p>恒心团队多由海外名校毕业，年龄层与目标客户群体相仿，能精准把握当下留学生的心态与需求；</p>
+                            <p>源源不绝的创新与构想打破传统营销推广模式，更多需求者的福音；</p>
+                            <p>强大的IT技术让资源与客户大数据平台的搭建变得精准而简单</p>
                         </div>
                     </div>
                 </div>
@@ -37,9 +37,10 @@
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
-                        <h2>2.服务至上的处事理念，面面俱到的灵犀之笔</h2>
-                        <p>美国学校往往颇为看重申请者的思维过程和综合素质，而不只是分数。如何能够使申请者提交的材料与美国学校的价值观达成一致，并正中招生官的下怀，是我们在帮助学生申请时最注重的问题，也是提高申请成功率的最关键所在。</p>
-                        <p>名盛留学会根据顾客实际情况提供私人定制般的申请计划，想客户所想，急客户所急，努力做到以人为本的申请策略，并为客户提供针对名校招生口味的全方位背景提升。</p>
+                        <h2>细化却不僵化的服务</h2>
+                        <p>一对一客服随时待命，多轮沟通，全面掌握客户现状与需求；</p>
+                        <p>针对不同人群现状，灵活制定多种可对比解决方案，让选择权始终在客户手中；</p>
+                        <p>全程跟进答疑，每阶段准时反馈，辅之官网进度查询功能，每一步都让客户安心</p>
                     </div>
                 </div>
             </div>
@@ -49,9 +50,12 @@
                     <div class="hexoco-project-item">
                         <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
-                            <h2>3.更熟悉美国大学的招生偏好</h2>
-                            <p>由于地处美国，我们能够更加有效、及时地与所申请目标院校展开讨论。我公司与多所学校达成合作，所以会努力使申请人和校方达到要求匹配。帮学生选择的学校都一律是跟学生共同研究后的决定。</p>
-                       </div>
+                            <h2>大同却大不同的体验</h2>
+                            <p>全球代理四方汇集最及时的需求动态与政策走向；</p>
+                            <p>完备的售后体系与健全的应急备案作保障，决不让任何一个客户空手而归；</p>
+                            <p>会员奖励机制让每一个来到恒心的人在被服务的同时，还能有利可图；</p>
+                            <p>不定期开展留学生线上活动，动动手指就能让课余生活变得有声有色</p>
+                        </div>
                     </div>
                 </div>
 
@@ -59,9 +63,12 @@
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
-                        <h2>4.丰富的成功案例数据库，提供准确值</h2>
-                        <p>多年来为数众多的成功案例，形成独家数据库，为申请者提供准确指导学生可随时与顾问老师沟通，确保透明、高效的申请。</p>
-                        <p>基于专业排名，就业数据，学校排名等，并结合学生个人兴趣、目标和理想进行分析，为学生量身打造出国留学方案。</p>
+                        <h2>有广度更有深度的资源</h2>
+                        <p>核心项目均为一手优质资源，保证最低的价格，最快的速度，最贴心的服务与最完美的结果；</p>
+                        <p>恒心有最稳健而资深的项目直接合作方：</p>
+                        <p>丹佛宏思学院</p>
+                        <p>猎聘网北美总部</p>
+                        <p>EKKO Development Group</p>
                     </div>
                 </div>
             </div>
