--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -102,9 +102,11 @@
 						<span class="icon">
 							<i class="icon-eye"></i>
 						</span>
-						<h3>与各大名校合作紧密</h3>
-						<p>恒心前途深知知己知彼，百战不殆的道理，在申请的这片江湖，紧密的与各大名校合作，得到一手信息资源，更好而准确的为学生服务。</p>
-						<p><a href="#" class="btn btn-primary">Learn More</a></p>
+						<h3>年轻却不轻狂的团队</h3>
+						<p>恒心团队多由海外名校毕业，年龄层与目标客户群体相仿，能精准把握当下留学生的心态与需求</p>
+                        <p>源源不绝的创新与构想打破传统营销推广模式，更多需求者的福音</p>
+                        <p>强大的IT技术让资源与客户大数据平台的搭建变得精准而简单</p>
+{#						<p><a href="#" class="btn btn-primary">Learn More</a></p>#}
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-3">
@@ -112,8 +114,10 @@
 						<span class="icon">
 							<i class="icon-command"></i>
 						</span>
-						<h3>恒心前途旗下投资项目BUC ，AC</h3>
-						<p>教育的这片土壤下孕育着无穷的潜力，四川恒心前途教育咨询公司投资了众多的教育机构，意求为建造教育的大厦填砖加瓦，这其中比较突出的有Bethesda University 和 Angeles College。</p>
+						<h3>细化却不僵化的服务</h3>
+						<p>一对一客服随时待命，多轮沟通，全面掌握客户现状与需求；</p>
+                        <p>针对不同人群现状，灵活制定多种可对比解决方案，让选择权始终在客户手中；</p>
+                        <p>全程跟进答疑，每阶段准时反馈，辅之官网进度查询功能，每一步都让客户安心</p>
 					</div>
 				</div>
                 <div class="col-md-3 col-sm-3">
@@ -121,8 +125,11 @@
 						<span class="icon">
 							<i class="icon-eye"></i>
 						</span>
-						<h3>拥有众多教育资源</h3>
-						<p>在教育咨询的领域中，四川恒心前途教育咨询公司凭借大数据分析，资源整合而独步江湖，大到留学，广告，出行，生活，小至游学，暑课，监管，辅导，都有名盛的身影。</p>
+						<h3>大同却大不同的体验</h3>
+                        <p>全球代理四方汇集最及时的需求动态与政策走向；</p>
+                        <p>完备的售后体系与健全的应急备案作保障，决不让任何一个客户空手而归；</p>
+                        <p>会员奖励机制让每一个来到恒心的人在被服务的同时，还能有利可图；</p>
+                        <p>不定期开展留学生线上活动，动动手指就能让课余生活变得有声有色</p>
 						<p><a href="#" class="btn btn-primary">Learn More</a></p>
 					</div>
 				</div>
@@ -131,8 +138,14 @@
 						<span class="icon">
 							<i class="icon-power"></i>
 						</span>
-						<h3>常春藤名校申请团队</h3>
-						<p>我们的团队高手林立，均出身于各大名校，熟知学校的生存法则。其中有超过三成的外籍教师，既有前招生官又有学校董事。他们不仅知识渊博，还深知各大名校的不外宣之道并能巧妙的运用到名校申请之中，使得我们百战百胜。</p>
+						<h3>有广度更有深度的资源</h3>
+						<p>核心项目均为一手优质资源，保证最低的价格，最快的速度，最贴心的服务与最完美的结果；</p>
+                        <p>恒心有最稳健而资深的项目直接合作方：</p>
+                          <p>xx培训学校（名称？）</p>
+                          <p>丹佛宏思学院</p>
+                          <p>猎聘网北美总部</p>
+                          <p>EKKO Development Group</p>
+
 						<p><a href="#" class="btn btn-primary">Learn More</a></p>
 					</div>
 				</div>
@@ -373,7 +386,7 @@
 			<!-- </div> -->
 		</div>
 	</div>
-
+    </div>
 {#	<div id="hxco-services">#}
 {#		<div class="hxco-container">#}
 {##}
