--- a/core/templates/web/highschool.html
+++ b/core/templates/web/highschool.html
@@ -5,6 +5,42 @@
         $(document).ready(function () {
             $('#abroad_education').prop('class', 'actived');
         });
+        $(document).ready(function () {
+            $('#home').prop('class', 'actived');
+        });
+        /*var a,b,c;
+        a=$("#dh").offset().top;//元素相对于窗口的距离
+        b=$(window).scrollTop(); //监控窗口已滚动的距离;
+        c=$(document).height();//整个文档的高度
+        d=$(window).height();//浏览器窗口的高度
+        element  标签
+        cssname  动画
+        offset  相对于窗口的距离
+        */
+        function scrollnumber(element,cssname,offset){
+            var a,b,c,d;
+            d=$(element).offset().top;
+            a=eval(d + offset);
+            b=$(window).scrollTop();
+            c=$(window).height();
+            if(b+c>a){
+                $((element)).addClass((cssname));
+            }
+        }
+
+        function scrollfun(){
+
+            scrollnumber("#highschool",'animated-ourservice',200);
+            scrollnumber("#Columbia",'animated-ourservice',10);
+            scrollnumber("#process",'animated-ourservice',10);
+        }
+
+        $(document).ready(function(e) {
+            scrollfun();
+            $(window).scroll(function(){
+                scrollfun();
+            });
+        });
     </script>
 {% endblock %}
 
@@ -44,9 +80,8 @@
 
     <div class="container" style="margin-top:3em;">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
-                <h3>美国高中登陆计划</h3>
-                <h4>高中留学不只是世界顶尖大学的门票，更是终生投资</h4>
+            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">
+                <h4>海外高中</h4>
             </div>
 
             <div class="col-md-6">
@@ -72,8 +107,7 @@
                         <i class="icon-check"></i>
                     </span>
                     <div class="feature-copy">
-                        <h3>一. 孩子具有特殊特长</h3>
-                        <p>美国教育注重培养音乐，艺术和体育等特长，能为孩子提供国内不容易得到的较优质的资源和环境，以及支持。</p>
+                        <h5>一.这不是放任，是最好的成全。与其在国内高中变成装填机器，不如给孩子一片广阔天空找寻自我的价值。</h5>
                     </div>
                 </div>
 
@@ -82,8 +116,7 @@
                         <i class="icon-check"></i>
                     </span>
                     <div class="feature-copy">
-                        <h3>二. 孩子不适应国内的教育体制</h3>
-                        <p>有些孩子不适应国内的应试教育环境，来到美国求学然后轻松拿到哈佛的学士和硕士学位。</p>
+                        <h5>二.每个孩子都有过人之处，你想眼看着国内的教育将它束缚遏制，还是让它在自由国度里尽情收获鼓励和赞许？</h5>
                     </div>
                 </div>
 
@@ -92,8 +125,7 @@
                         <i class="icon-check"></i>
                     </span>
                     <div class="feature-copy">
-                        <h3>三. 孩子在国内的填鸭式教育体制中，得不到肯定。</h3>
-                        <p>相对于受国内单一的价值观教育环境下比较成绩，美国的教育环境给予孩子更宽广的发展空间和多元选择。</p>
+                        <h5>三. 眼界与思维比成绩更能左右未来，你想看孩子因为分数不拔尖而被否定一切，还是带着满满自信笑对每一个明天？</h5>
                     </div>
                 </div>
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
@@ -101,84 +133,77 @@
                         <i class="icon-check"></i>
                     </span>
                     <div class="feature-copy">
-                        <h3>四. 孩子参加国内高考没有取得理想的成绩。</h3>
-                        <p>相对于受国内单一的价值观教育环境下比较成绩，美国的教育环境给予孩子更宽广的发展空间和多元选择。</p>
+                        <h5>四. 既然文凭至上让孩子必须在国内与千万人争二十分之一的优等名额，何不让他赢在起跑线，轻松跨入全球TOP100？</h5>
                     </div>
                 </div>
-                <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                    <span class="icon">
-                        <i class="icon-check"></i>
-                    </span>
-                    <div class="feature-copy">
-                        <h3>五. 名人子女和企业交班人，在国内受教育压力大和受束缚。</h3>
-                        <p>在美国可以享受更多的教育自由空间和扩展国际视野。许多名人及企业家都会趁早送孩子到美国读书。</p>
-                    </div>
-                </div>
+
             </div>
 
 
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated"  style="margin-top: 3em;">
-                <h4>圆梦计划</h4>
-                <p>全程规划，申请录取，暑假夏令营，学校参观，VIP学生将享受私人订制，建立清晰的留学规划，学业规划和未来职业发展方向规划。成形后期，无障碍适应训练，学术私教指导，助你完美适应留学生活。</p>
+            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="Columbia" style="margin-top: 4em;">
+                <h4>直通高中-哥伦比亚中学</h4>
             </div>
+             <div class="col-md-8 col-md-offset-2 text-center" style="margin-top:-3em;">
+                 <p>哥伦比亚中学（Columbia Academy Vancouver Canada），地处温哥华市中心，除却加拿大BC省教育部批准的课程、颁发BC省高中毕业文凭、教师均为持BC省教师牌照的加拿大注册教师之外，哥伦比亚中学与一般公立中学相比，还具有以下明显优势:</p>
+             </div>
 
-            <div class="col-md-4 animate-box fadeInUp animated">
-                <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
-                    <div class="hexoco-text">
-                        <h2>夏令营</h2>
-                        <p>美国本土私人定制暑假夏令营，自由入营时间，全英文教学，专属老师全程陪伴，妥善住宿安排。</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
-                <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
-                    <div class="hexoco-text">
-                        <h2>Beautiful Sunrise</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 animate-box fadeInUp animated">
-                <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
-                    <div class="hexoco-text">
-                        <h2>夏令营</h2>
-                        <p>美国本土私人定制暑假夏令营，自由入营时间，全英文教学，专属老师全程陪伴，妥善住宿安排。</p>
-                    </div>
-                </div>
-            </div>
+{#            <div class="col-md-4 animate-box fadeInUp animated">#}
+{#                <div class="hexoco-project-item">#}
+{#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
+{#                    <div class="hexoco-text">#}
+{#                        <h2>夏令营</h2>#}
+{#                        <p>美国本土私人定制暑假夏令营，自由入营时间，全英文教学，专属老师全程陪伴，妥善住宿安排。</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="col-md-4 animate-box fadeInUp animated">#}
+{#                <div class="hexoco-project-item">#}
+{#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
+{#                    <div class="hexoco-text">#}
+{#                        <h2>Beautiful Sunrise</h2>#}
+{#                        <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="col-md-4 animate-box fadeInUp animated">#}
+{#                <div class="hexoco-project-item">#}
+{#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
+{#                    <div class="hexoco-text">#}
+{#                        <h2>夏令营</h2>#}
+{#                        <p>美国本土私人定制暑假夏令营，自由入营时间，全英文教学，专属老师全程陪伴，妥善住宿安排。</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
 
 
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">
-                <h3>美国高中申请</h3>
-                <p>恒心前途登陆计划应低龄留学生群体的实际需求，帮助每个小留学生制订适应自身发展需求的长远的从留学到就业的规划，并提供从生活到学术的针对个体的介入辅导和咨询服务。
-                    我们具体的服务内容包括选校申请咨询，申请材料准备，申请文书美化，面试模拟与辅导，生活辅导，学业辅导等。
-                </p>
-            </div>
-            <div class="col-md-6 animate-box fadeInUp animated">
-                <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
-                    <div class="hexoco-text">
-                        <h2>高中申请</h2>
-                        <p>针对具有一定英语基础，良好家庭经济条件的有意来美念高中的中国学生，名盛登陆计划为申请者提供个性化的申请服务：依学生个人条件，意愿结合我们基于大数据分析得出的建议来完成选校和申请方案的制订以及实施。必要时提供背景提升和标准化考试辅导的服务。确保人人有理想offer。</p>
-                    </div>
-                </div>
-            </div>
+{#            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated" style="margin-top: 3em;">#}
+{#                <h3>美国高中申请</h3>#}
+{#                <p>恒心前途登陆计划应低龄留学生群体的实际需求，帮助每个小留学生制订适应自身发展需求的长远的从留学到就业的规划，并提供从生活到学术的针对个体的介入辅导和咨询服务。#}
+{#                    我们具体的服务内容包括选校申请咨询，申请材料准备，申请文书美化，面试模拟与辅导，生活辅导，学业辅导等。#}
+{#                </p>#}
+{#            </div>#}
+{#            <div class="col-md-6 animate-box fadeInUp animated">#}
+{#                <div class="hexoco-project-item">#}
+{#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
+{#                    <div class="hexoco-text">#}
+{#                        <h2>高中申请</h2>#}
+{#                        <p>针对具有一定英语基础，良好家庭经济条件的有意来美念高中的中国学生，名盛登陆计划为申请者提供个性化的申请服务：依学生个人条件，意愿结合我们基于大数据分析得出的建议来完成选校和申请方案的制订以及实施。必要时提供背景提升和标准化考试辅导的服务。确保人人有理想offer。</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{##}
+{#            <div class="col-md-6 animate-box fadeInUp animated">#}
+{#                <div class="hexoco-project-item">#}
+{#                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">#}
+{#                    <div class="hexoco-text">#}
+{#                        <h2>高中转学</h2>#}
+{#                        <p>对目前学校不满意或因种种原因被开除取消学籍的学生，名盛登陆计划为申请者提供个性化的转学服务：为学生当下的学术困境指点迷津，并依照学生目前的状况制订转学以及身份应急方案。必要时提供签证辅导和生活辅导的服务。确保学生可以转入理想的高中。</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
 
-            <div class="col-md-6 animate-box fadeInUp animated">
-                <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
-                    <div class="hexoco-text">
-                        <h2>高中转学</h2>
-                        <p>对目前学校不满意或因种种原因被开除取消学籍的学生，名盛登陆计划为申请者提供个性化的转学服务：为学生当下的学术困境指点迷津，并依照学生目前的状况制订转学以及身份应急方案。必要时提供签证辅导和生活辅导的服务。确保学生可以转入理想的高中。</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated"  style="margin-top: 3em;">
-                <h4>服务流程</h4>
+            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="process" style="margin-top: 4em;">
+                <h4>海外高中申请流程</h4>
             </div>
 
             <div class="row row-bottom-padded-lg">
