--- a/core/templates/web/ksbk.html
+++ b/core/templates/web/ksbk.html
@@ -43,19 +43,19 @@
     </div>
     <div class="container" style="margin-top:3em;">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
+            <div class="col-md-8 col-md-offset-2 text-center heading-section">
                 <h3>独家招生总代理</h3>
-
+                <p>如果你觉得用国外四年的孤独换一张毕业证书太过“劳民伤财”，那一年制快速本科可能就是你心仪的 PLAN B</p>
             </div>
         </div>
+
         <div class="text-center">
             <img src="/static/images/bsd.png">
         </div>
         <div class="row" style="margin-top:4em;">
             <div class="col-md-8 col-md-offset-2 text-center heading-section" id="ourservice">
                 <h4>学校特色</h4>
-{#					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>#}
-            </div>
+           </div>
         </div>
         <div class="row">
             <div class="col-md-6">
@@ -118,22 +118,13 @@
                 </div>
                 <div class="col-md-8 col-md-push-1">
                     <h4 class="fh5co-number">01.</h4>
-                    <h2 class="numberh2">申请前评估</h2>
-                    <p class="numberp">Lorem ipsum dolor sit amet</p>
-                    <ul>
-                        <li>充分了解学生的申请意愿和个人兴趣方向</li>
-                        <li>充分评估学生情况、背景</li>
-                    </ul>
+                    <h2 class="numberh2">提交资料</h2>
                 </div>
             </div>
             <div class="row row-bottom-padded-lg">
                 <div class="col-xs-push-2 col-md-8">
                     <h4 class="fh5co-number">02.</h4>
-                    <h2>选定目标学校</h2>
-                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>
-                    <ul>
-                        <li>综合学生实力和意愿，选定目标学校 </li>
-                    </ul>
+                    <h2>可行性评估</h2>
                 </div>
                 <div class="col-md-3 col-md-push-1">
                     <div class="fh5co-icon"><i class="icon-mobile"></i></div>
@@ -145,22 +136,18 @@
                 </div>
                 <div class="col-md-8 col-md-push-1">
                     <h4 class="fh5co-number">03.</h4>
-                    <h2 class="numberh2">制订申请方案</h2>
-                    <p class="numberp">Lorem ipsum dolor sit amet</p>
-                    <ul>
-                        <li>依据目标学校的要求，制订申请时间进程表 </li>
-                    </ul>
+                    <h2 class="numberh2">录取</h2>
                 </div>
             </div>
             <div class="row row-bottom-padded-lg">
                 <div class="col-xs-push-2 col-md-8">
                     <h4 class="fh5co-number">04.</h4>
-                    <h2>申请材料准备</h2>
-                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>
-                    <ul>
-                        <li>根据指定的申请方案，准备相应材料和文书</li>
-                        <li>必要时提供考试辅导和背景提升服务</li>
-                    </ul>
+                    <h2>学分转换</h2>
+{#                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>#}
+{#                    <ul>#}
+{#                        <li>根据指定的申请方案，准备相应材料和文书</li>#}
+{#                        <li>必要时提供考试辅导和背景提升服务</li>#}
+{#                    </ul>#}
                 </div>
                 <div class="col-md-3 col-md-push-1">
                     <div class="fh5co-icon"><i class="icon-mobile"></i></div>
@@ -172,11 +159,7 @@
                 </div>
                 <div class="col-md-8 col-md-push-1">
                     <h4 class="fh5co-number">05.</h4>
-                    <h2 class="numberh2">申请方案实施</h2>
-                    <p class="numberp">Lorem ipsum dolor sit amet</p>
-                    <ul>
-                        <li>基于指定的申请方案，将学生申请材料按时间规划递交学校，并保持与学校的沟通 </li>
-                    </ul>
+                    <h2 class="numberh2">快速毕业</h2>
                 </div>
             </div>
 
